--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               داشته باشد.</p> ما در بایا تلاشمان بر این بوده است که ارزشی به نام محله مهربانی خلق کنیم و واسطه ای بین
             شما
             <p>
-            </p>نیکوکاران و مهربانان با همنوعان نیازمند خود باشیم.</p>
+            </p>نیکوکاران و مهربانان با همنوعان نیازمند خود باشیم.</p>L
           </div>
         </div>
       </div>
